--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!--
     A fonte usada no site é a The Braggest porém o ideal era a Portfield Alt que é pago.
     O site inspiração é o burberry - https://us.burberry.com/
-    A marca usada será a FERMOW`S CONCEPT - https://www.instagram.com/p/CNsB2xtJL2D/
+    A marca usada será a FERMOW`S CONCEPT - https://www.instagram.com/fermowsconcept/
+    file:///home/thiago-s-goncalves/Documents/ThiagoncalvsPC/clothing-store/index.html
 -->
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -9,22 +10,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fermon's Official | Amapaense Fashion & Beauty</title>
-    <style>
-        @font-face {
-            font-family: "Fermon";
-            src: url("fonts/the_braggest/The Braggest_Demo.otf") format('opentype'), url("fonts/the_braggest/The Braggest_Demo.ttf") format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        h1{
-            font-family: 'Fermon', Times, serif;
-            font-size: 8em;
-            font-weight: normal;
-        }
-    </style>
+    <title>Fermow's Official | Amapaense Fashion & Beauty</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Fermon's</h1>
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><h1 id="tlogo">Fermow's</h1></li>
+                <li>
+                    <a href="#">clothing</a>
+                    <ul>
+                        <li><a href="#">vestidos</a></li>
+                        <li><a href="#">macacões</a></li>
+                        <li><a href="#">calças</a></li>
+                        <li><a href="#">shorts</a></li>
+                        <li><a href="#">conjuntos</a></li>
+                        <li><a href="#">blusas</a></li>
+                        <li><a href="#">camisas</a></li>
+                        <li><a href="#">saias</a></li>
+                        <li><a href="#">body</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">bags</a></li>
+                <li><a href="#">scarves</a></li>
+                <li><a href="#">accessories</a></li>
+                <li><a href="#">shoes</a></li>
+                <li><a href="#">make-up</a></li>
+                <li><a href="#">gifts</a></li>
+                <li><a href="#">for you</a></li>
+                <li>
+                    <ul>
+                        <a href="#"><input type="search" name="" id="">pes</a>
+                    </ul>
+                </li>
+                <li><button onclick="document.getElementById('id01').style.display='block'"style='width:auto;'>login</button></li>
+                <li><div><a href="#">icon-bag</a></div></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <article>
+            <aside></aside>
+        </article>
+        <article></article>
+    </section>
+    <footer></footer>
 </body>
 </html>
