--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <a id="tlogo">Fermow's</a>
         <nav>
             <ul class="menu">
-                <li><h1 id="tlogo">Fermow's</h1></li>
                 <li>
                     <a href="#">clothing</a>
                     <ul>
@@ -39,21 +39,35 @@
                 <li><a href="#">make-up</a></li>
                 <li><a href="#">gifts</a></li>
                 <li><a href="#">for you</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul class="menu">
                 <li>
+                    <a href="#">pesq</a>
                     <ul>
-                        <a href="#"><input type="search" name="" id="">pes</a>
+                        <input type="search" name="" id="">
                     </ul>
                 </li>
                 <li><button onclick="document.getElementById('id01').style.display='block'"style='width:auto;'>login</button></li>
-                <li><div><a href="#">icon-bag</a></div></li>
+                <li>
+                    <a href="#">icon-bag</a>
+                    <ul>
+                        <li><a href="#">your bag is empty</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="sectionone">
+        <article>
+            <div class="slideimg">
+                <a href="#">img</a>
+            </div>
+        </article>
         <article>
             <aside></aside>
         </article>
-        <article></article>
     </section>
     <footer></footer>
 </body>
