--- a/index.html
+++ b/index.html
@@ -95,61 +95,77 @@
         </section>
         <footer class="footer-grid"><!-----------------------------------------ESTRUTURA DO FOOTER-->
             <div id="f1">
-                <h1>Email Sign-Up</h1>
-                <p>Sign up for email updates on the latest Burberry collections, campaigns and videos.</p>
-                <input type="email" name="email" id="email" pattern=".+@globex.com" size="30" placeholder="sophie@example.com" required>
+                <div>
+                    <h1>Email Sign-Up</h1>
+                    <p id="text-none-footer">Sign up for email updates on the latest Burberry collections, campaigns and videos.</p>
+                    <input type="email" name="email" id="email" pattern=".+@globex.com" size="30" placeholder="sophie@example.com" required>
+                </div>
             </div>
             <div id="f2">
                 <nav>
-                    <li><a href="#">store locator</a></li>
-                    <li><a href="#">download our app</a></li>
+                    <ul>
+                        <li><a href="#">store locator</a></li>
+                        <li><a href="#">download our app</a></li>
+                    </ul>
                 </nav>
             </div>
             <div id="f3">
                 <nav>
                     <ul>
-                        <li>
+                        <div id="f3li">
+                            <li>
                             <a href="#">costumer service</a>
-                            <ul>
-                                <li><a href="#">contact us</a></li>
-                                <li><a href="#">shipping</a></li>
-                                <li><a href="#">ordering and payment</a></li>
-                                <li><a href="#">returns</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">legal & cookies</a>
-                            <ul>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Cookie Policy</a></li>
-                                <li><a href="#">Accessibility Statement</a></li>
-                                <li><a href="#">Japan only- SCTL indications</a></li>
-                                <li><a href="#">Transparency in the Supply Chain and Modern Slavery Statements</a></li>
-                                <li><a href="#">Privacy Policy of Burberry Korea Limited. (Customer)</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">do not sell my personal information</a></li>
-                        <li><a href="#">transparency in the supply chain and modern slavery statements</a></li>
-                        <li>
-                            <a href="#">follow us</a>
-                            <ul>
-                                <li><a href="#">facebook</a></li>
-                                <li><a href="#">twitter</a></li>
-                                <li><a href="#">instagram</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">our company</a>
-                            <ul>
-                                <li><a href="#">Our History</a></li>
-                                <li><a href="#">Burberry Group Plc</a></li>
-                                <li><a href="#">Careers</a></li>
-                                <li><a href="#">Corporate Responsibility</a></li>
-                                <li><a href="#">Site Map</a></li>
-                                <li><a href="#">Sustainability</a></li>
-                            </ul>
-                        </li>
+                                <ul>
+                                    <li><a href="#">contact us</a></li>
+                                    <li><a href="#">shipping</a></li>
+                                    <li><a href="#">ordering and payment</a></li>
+                                    <li><a href="#">returns</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <div id="f3li">
+                            <li>
+                                <a href="#">legal & cookies</a>
+                                <ul>
+                                    <li><a href="#">Terms & Conditions</a></li>
+                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="#">Cookie Policy</a></li>
+                                    <li><a href="#">Accessibility Statement</a></li>
+                                    <li><a href="#">Japan only- SCTL indications</a></li>
+                                    <li><a href="#">Transparency in the Supply Chain and Modern Slavery Statements</a></li>
+                                    <li><a href="#">Privacy Policy of Burberry Korea Limited. (Customer)</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <div id="f3li">
+                            <li><a href="#" id="text-none-footer">do not sell my personal information</a></li>
+                        </div>
+                        <div id="f3li">
+                            <li><a href="#" id="text-none-footer">transparency in the supply chain and modern slavery statements</a></li>
+                        </div>
+                        <div id="f3li">
+                            <li>
+                                <a href="#">follow us</a>
+                                <ul>
+                                    <li><a href="#">facebook</a></li>
+                                    <li><a href="#">twitter</a></li>
+                                    <li><a href="#">instagram</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <div id="f3li">
+                            <li>
+                                <a href="#">our company</a>
+                                <ul>
+                                    <li><a href="#">Our History</a></li>
+                                    <li><a href="#">Burberry Group Plc</a></li>
+                                    <li><a href="#">Careers</a></li>
+                                    <li><a href="#">Corporate Responsibility</a></li>
+                                    <li><a href="#">Site Map</a></li>
+                                    <li><a href="#">Sustainability</a></li>
+                                </ul>
+                            </li>
+                        </div>
                     </ul>
                 </nav>
             </div>
