--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
                 </div>
             </section>
             <section class="section2">
-                <div data-slide="slide2" id="slide2">
-                    <div><a href="#">Roupa tal</a></div>
+                <div class="area-text">
+
+                </div>
+                <div class="area-slide">
+
                 </div>
             </section>
             <section class="section3">
-                <div data-slide="slide3" id="slide3">
-                    <div><a href="#">Roupa tal</a></div>
-                </div>
+                
             </section>
             <section class="section4">
                 <div data-slide="slide4" id="slide4">
