add1 main 19mai21

--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
                 </div>
             </section>
             <section class="section3">
-                
+                <div class="fotoS3">
+                    <img src="./IMG/imgteste/2.jpg" alt="imgt2">
+                    <div class="menuzinho1">
+                        <a href="#">VISIT THE WORLD OF OLYMPIA POP-UPS</a>
+                        <a href="#" id="aPrincipal">DISCOVER</a>
+                    </div>
+                </div>
             </section>
             <section class="section4">
                 <div data-slide="slide4" id="slide4">
