--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="./IMG/imgteste/2.jpg" alt="img1">
                         <img src="./IMG/imgteste/3.jpg" alt="img2">
                         <img src="./IMG/imgteste/4.jpg" alt="img3">
-                        <img src="./IMG/imgteste/5.jpg" alt="img4">
+                        <img src="./IMG/ROUPAS/slide1.png" alt="img4">
                     </div>
                     <nav class="slide-nav">
                         <div class="slide-thumb"></div>
