add header edit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fermow's Official | Amapaense Fashion & Beauty</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 </head>
 <body>
     <div class="estrutura-geral-grid">
@@ -50,14 +50,20 @@
                         <nav>
                             <ul class="menu2">
                                 <li>
-                                    <a href="#"><i class="fas fa-search"></i></a>
+                                    <a><span class="material-icons-outlined">
+                                        search
+                                        </span></a>
                                     <ul>
                                         <li><input type="search" name="" id="" placeholder="search"></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><i class="far fa-user"></i></a></li>
+                                <li><a><span class="material-icons-outlined">
+                                    account_circle
+                                    </span></a></li>
                                 <li>
-                                    <a href="#"><i class="fas fa-shopping-bag"></i></a>
+                                    <a href="#"><span class="material-icons-outlined">
+                                        shopping_cart
+                                        </span></a>
                                     <ul>
                                         <li><a href="#">your bag is empty</a></li>
                                     </ul>
@@ -66,11 +72,10 @@
                         </nav>
                     </header>
                     <div class="slide-itens"><!--1920x1200-->
-                        <img src="./IMG/imgteste/1.jpg" alt="img0">
-                        <img src="./IMG/imgteste/2.jpg" alt="img1">
-                        <img src="./IMG/imgteste/3.jpg" alt="img2">
-                        <img src="./IMG/imgteste/4.jpg" alt="img3">
-                        <img src="./IMG/ROUPAS/slide1.png" alt="img4">
+                        <img src="./IMG/ROUPAS/slide1.png" alt="img1">
+                        <img src="./IMG/ROUPAS/slide2.png" alt="img2">
+                        <img src="./IMG/ROUPAS/slide3.png" alt="img3">
+                        <img src="./IMG/ROUPAS/slide4.png" alt="img4">
                     </div>
                     <nav class="slide-nav">
                         <div class="slide-thumb"></div>
