--- a/index.html
+++ b/index.html
@@ -86,10 +86,18 @@
             </section>
             <section class="section2">
                 <div class="area-text">
-
+                    <div class="text-section2"><a href="#">texto teste</a></div>
                 </div>
-                <div class="area-slide">
-
+                <div data-slide="area-slide2" class="area-slide2">
+                    <div class="slide2-itens">
+                        <img src="./IMG/ROUPAS/slide2.png" alt="img2">
+                        <img src="./IMG/ROUPAS/slide4.png" alt="img4">
+                    </div>
+                    <nav class="slide2-nav">
+                        <div class="slide2-thumb"></div>
+                        <button class="slide2-prev">prev</button>
+                        <button class="slide2-next">next</button>
+                    </nav>
                 </div>
             </section>
             <section class="section3">
